--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "server"]
 	path = server
 	url = https://github.com/TeamChicago/server.git
+[submodule "client"]
+	path = client
+	url = https://github.com/TeamChicago/client.git
