--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,12 @@ services:
     ports:
       - 5050:80
 
+  app:
+    build:
+      context: ./client
+    command: ["npm", "start"]
+    ports:
+      - 8081:8081
+
 volumes:
   pgdata:
