--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,15 @@ services:
      - CHOKIDAR_USEPOLLING=true
     tty: true
 
+  spingboot:
+    restart: always
+    image: springboot
+    build:
+      context: ./server
+    ports:
+      - 8080:8080
+    #volumes:
+
 
 volumes:
   pgdata:
