chore: add spring boot gralde on docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,9 @@ services:
     image: springboot
     build:
       context: ./server
+    #command: ["./gradlew","run"]
+    build:
+      context: ./server
     ports:
       - 8080:8080
     #volumes:
