chore: fix typo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
      - CHOKIDAR_USEPOLLING=true
     tty: true
 
-  spingboot:
+  springboot:
     restart: always
     image: springboot
     build:
