--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.8.3-alpine
 
+ADD . /home/app/
 WORKDIR /app
 
 
@@ -10,7 +11,6 @@ COPY ./requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
 EXPOSE 5000
-#COPY . .
 
-# CMD tail -f /dev/null
+
 CMD [ "python3", "app.py" ]
